[gd_scene load_steps=8 format=3 uid="uid://cdraf436wlgqe"]

[ext_resource type="Script" path="res://Conversation_system/Scripts/Conversation_displayer.gd" id="1_g2h7t"]
[ext_resource type="Texture2D" uid="uid://dpt3ya20krrfp" path="res://Assets/placeholder.jpg" id="3_wwslr"]
[ext_resource type="FontFile" uid="uid://ckdkjdb6ovipj" path="res://Assets/Text_fonts/m5x7.ttf" id="4_mfi6p"]

[sub_resource type="Animation" id="Animation_xoehg"]
length = 0.001

[sub_resource type="Animation" id="Animation_ik8id"]
resource_name = "Show_text"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible_characters")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 10),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 500.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_on6xw"]
_data = {
"RESET": SubResource("Animation_xoehg"),
"Show_text": SubResource("Animation_ik8id")
}

[sub_resource type="Theme" id="Theme_whx6g"]
default_font = ExtResource("4_mfi6p")
default_font_size = 32

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_g2h7t")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_on6xw")
}

[node name="MarginContainer" type="MarginContainer" parent="."]
clip_contents = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 4
alignment = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
size_flags_vertical = 8

[node name="Button_list" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="Conversation_container" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Conversation_container"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="Contenedor_imagen" type="PanelContainer" parent="MarginContainer/VBoxContainer/Conversation_container/HBoxContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Conversation_container/HBoxContainer/Contenedor_imagen"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="Face_image" type="TextureRect" parent="MarginContainer/VBoxContainer/Conversation_container/HBoxContainer/Contenedor_imagen/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
texture = ExtResource("3_wwslr")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Conversation_container/HBoxContainer"]
custom_minimum_size = Vector2(600, 128)
layout_mode = 2
theme_override_constants/margin_left = 7
theme_override_constants/margin_top = 7
theme_override_constants/margin_right = 7
theme_override_constants/margin_bottom = 7

[node name="TextDisplayer" type="RichTextLabel" parent="MarginContainer/VBoxContainer/Conversation_container/HBoxContainer/MarginContainer"]
unique_name_in_owner = true
texture_filter = 1
clip_contents = false
layout_mode = 2
mouse_force_pass_scroll_events = false
theme = SubResource("Theme_whx6g")
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. In aliquet tortor libero, id faucibus lectus vestibulum sed. Phasellus blandit orci at dui malesuada, in suscipit odio luctus. Etiam est lacus, pretium sed vestibulum vitae, dignissim ut orci."
scroll_active = false
visible_characters_behavior = 1
